@@ -1,3 +1,8 @@
+Tue Dec 24 12:11:43 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* include/ruby/ruby.h (RARRAY_ASET): try to avoid compiler warning.
+	  [Bug #9287]
+
 Tue Dec 24 05:04:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/fileutils/test_fileutils.rb (setup): should not call
